# rpg-npc-generator

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  compose.yml  config.py  fly.toml  pyproject.toml  requirements.txt  run
.github/workflows/: ci.yml
config/: settings.py
data/: character_templates.json
db/: env.py  schema.sql  seeds.py
db/versions/: 85b8b2bd8d9a_init.py
npcgen/: __init__.py  routes.py
npcgen/auth/: daos.py  decorators.py  forms.py  models.py  services.py  views.py
npcgen/characters/: ai_tools.py  daos.py  forms.py  models.py  services.py  views.py
npcgen/core/: db_utils.py  expections.py  pagination.py
npcgen/static/css/: styles.css
npcgen/static/js/: generate.js  main.js
npcgen/static/styles/: styles.css
npcgen/templates/: layout.html  macros.html
npcgen/templates/auth/: account.html  change_password.html  login.html  register.html
npcgen/templates/characters/: details.html  generate.html  index.html
npcgen/templates/characters/partials/: character_details.html  generate_form.html
tests/: conftest.py  test_db_utils.py  test_factory.py
tests/integration/: test_auth.py  test_characters.py  test_db_utils.py  test_factory.py
tests/unit/auth/: test_auth_service.py
tests/unit/characters/: test_character_generation_service.py  test_template_service.py
