[project]
name = "npcgen"
version = "1.0.0"
description = ""
dependencies = ["flask"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["npcgen"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.djlint]
profile = "jinja"
ignore = "H030,H031"
